cmake_minimum_required(VERSION 3.20)
project(day7_point)

set(CMAKE_CXX_STANDARD 14)

add_executable(day7_point main.cpp)

add_executable(1.1 1.1.cpp)
add_executable(02 02.cpp)
add_executable(03_null_pointer 03_null_pointer.cpp)
add_executable(04_wild_pointer 04_wild_pointer.cpp)
add_executable(05_const_pointer 05_const_pointer.cpp)
add_executable(06_pointer_const 06_pointer_const.cpp)
add_executable(07_c_pointer_c 07_c_pointer_c.cpp)
add_executable(08_pointer_array 08_pointer_array.cpp)
add_executable(09_pointer_func 09_pointer_func.cpp)
add_executable(e.g.1 e.g.1.cpp)